feat: :sparkles: 项目初始化2
Signed-off-by: xiongke <917634854@qq.com>